# gbgdata

./: .dockerignore  .env.example  .env.test  .gitignore  Cargo.toml  GEMINI.md  Makefile  README.md  docker-compose.nominatim.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  ideas.md  todo.md
.github/workflows/: ci.yml  (+2 more)
docs/: hosting.md  nominatim-standalone-setup.md  usage.md
import-tool/: Cargo.toml
import-tool/.sqlx/: query-168797c3e6dbabfa527c2c492f65755f5e88572430bb0c02caf36c5341b69624.json  query-1e1e5ba6faab5157ff7db43484fafb4d4b4e5f206450f3ee7020313e031d811e.json  query-55ef8a2f0d11e0ab4bcbf45991612812b4bdc03f1744bbb8975c81ffa084a7d2.json  query-9f8f2bbf06b7deb9eb23ab4f2cbb3eb9c8ce37a3607e848c867113b7972f3bf9.json  query-c77228ad1040fbbc689570d8c9d7a27e325038ea51ff2a77f55a96a322998f0f.json  query-c79c490858d217e275ba3159c1541a6e68d62ff2d23ad34a2121ea8c7fa52d3a.json  query-e6df232eaf5cbbbb7f8e43bf414330e555e95ae293b7b0eeaa4f1657b4aa918a.json
import-tool/src/: db.rs  excel.rs  geocoder.rs  lib.rs  main.rs  parsers.rs
migrations/: 20260326000000_initial_schema.sql  20260326000001_pub_stats_view.sql  20260327000000_rename_county_to_region.sql  20260327000001_update_pub_stats_view.sql  20260328000000_admin_auth_and_audit.sql  20260328000001_user_engagement_schema.sql  20260328000002_passkeys_schema.sql  20260402000000_add_ranks_to_pub_stats.sql  20260403000000_site_settings.sql
scripts/: backup_db.sh  backup_nominatim.sh  migrate_test_db.sh
site/: robots.txt
web-app/: Cargo.toml  Dockerfile  Dockerfile.dev  README.md
(+141 files in other folders)
